tree-sitter-lambda/test/corpus/s.txt
============
S combinator
============

\x. \y. \z. x z (y z)

---

(source
  (abstraction
    (variable)
    (abstraction
      (variable)
      (abstraction
        (variable)
        (application 
          (application 
            (variable) 
            (variable)) 
          (application 
            (variable) 
            (variable)))))))
